<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="myapp.training.newitventure.com.mynewsapplication.WebViewDialogActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/press_the_button_to_lunch_the_website"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btnLunch"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:text="@string/lunchwebview"
            />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />

    </LinearLayout>

    </android.support.constraint.ConstraintLayout>